@@ -25,7 +25,15 @@ yet firm so feedback is welcome to get something we can live with.
 * Function comment blocks are generally just noise that quickly becomes
   obsolete.  If you absolutely must comment on parameters, put each on a
   separate line along with the comment.  That way changing the signature
-  will cause a change to the comments too.
+  may prompt a change to the comments too.
+
+* Use FIXIT (not FIXTHIS or TODO or whatever) to mark things left for a
+  day or even in just a minute.  That way we can find them easily and won't
+  lose track of them.
+
+* Presently using FIXIT-X where X = P | H | M | L, indicating perf, high,
+  med, or low priority.  For now, H, M, or L can indicate alpha 1, 2, or 3.
+  Perf changes fall between alpha 1 and 2.
 
 ==== Types
 
