@@ -17,7 +17,6 @@ module.h \
 mpse.h \
 parameter.h \
 plug_data.h \
-share.h \
 so_rule.h \
 value.h
 
