@@ -114,9 +114,9 @@ enum PseudoPacketType{
     PSEUDO_PKT_IP,
     PSEUDO_PKT_TCP,
     PSEUDO_PKT_DCE_RPKT,
-    PSEUDO_PKT_SMB_SEG,
     PSEUDO_PKT_DCE_SEG,
     PSEUDO_PKT_DCE_FRAG,
+    PSEUDO_PKT_SMB_SEG,
     PSEUDO_PKT_SMB_TRANS,
     PSEUDO_PKT_PS,
     PSEUDO_PKT_SDF,
